Fix tray icon visibility and navigation CSS issues
- Removed template image setting that was preventing tray icon from showing
- Fixed navigation menu CSS breaking when clicking Settings
- Improved tray icon creation with better error handling
- Simplified tray icon logic for better macOS compatibility

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
   </div>
 
   <!-- Profile Modal -->
-  <div id="profileModal" class="modal">
+  <dialog id="profileModal" class="modal">
     <div class="modal-box max-w-2xl backdrop-blur-xl bg-base-100/95">
       <h3 class="font-bold text-lg mb-4" id="profileModalTitle">Add Proxy Profile</h3>
       <form id="profileForm">
@@ -373,10 +373,10 @@
     <form method="dialog" class="modal-backdrop">
       <button>close</button>
     </form>
-  </div>
+  </dialog>
 
   <!-- Firewall Rule Modal -->
-  <div id="firewallRuleModal" class="modal">
+  <dialog id="firewallRuleModal" class="modal">
     <div class="modal-box max-w-2xl backdrop-blur-xl bg-base-100/95">
       <h3 class="font-bold text-lg mb-4" id="firewallRuleModalTitle">Add Firewall Rule</h3>
       <form id="firewallRuleForm">
@@ -436,10 +436,10 @@
     <form method="dialog" class="modal-backdrop">
       <button>close</button>
     </form>
-  </div>
+  </dialog>
 
   <!-- Rule Modal -->
-  <div id="ruleModal" class="modal">
+  <dialog id="ruleModal" class="modal">
     <div class="modal-box max-w-2xl backdrop-blur-xl bg-base-100/95">
       <h3 class="font-bold text-lg mb-4" id="ruleModalTitle">Add URL Rule</h3>
       <form id="ruleForm">
@@ -507,7 +507,7 @@
     <form method="dialog" class="modal-backdrop">
       <button>close</button>
     </form>
-  </div>
+  </dialog>
 
   <script src="renderer.js"></script>
 </body>
